src/ENVCAP/Parser/Interface/ParseInterface.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from src/ENVCAP/Parser/Interface/ParseInterface.y
-----------------------------------------------------------------------------


terminal '+' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_interfaceParser -> Program                  (0)
	Program -> FragmentInterface                       (1)
	FragmentInterface -> 'interface' var Required Interface   (2)
	FragmentInterface -> '@pure' 'interface' var Required Interface   (3)
	FragmentInterface -> '@resource' 'interface' var Required Interface   (4)
	Required ->                                        (5)
	Required -> 'require' var ';'                      (6)
	Required -> 'require' '(' Requirements ')' ';'     (7)
	Requirements -> Requirement                        (8)
	Requirements -> Requirement ',' Requirements       (9)
	Requirement -> var                                 (10)
	Interface -> InterfaceStatement ';' Interface      (11)
	Interface -> InterfaceStatement                    (12)
	InterfaceStatement -> TyAlias                      (13)
	InterfaceStatement -> IntfAlias                    (14)
	InterfaceStatement -> FunctionInterface            (15)
	InterfaceStatement -> ModuleInterface              (16)
	InterfaceStatement -> FunctorInterface             (17)
	InterfaceStatement -> BindingInterface             (18)
	InterfaceStatement -> IType                        (19)
	TyAlias -> 'type' var '=' Type                     (20)
	IntfAlias -> 'interface' var '{' Interface '}'     (21)
	FunctionInterface -> 'function' var '(' ParamList ')' ':' Type   (22)
	ModuleInterface -> 'module' var '{' Interface '}'   (23)
	ModuleInterface -> 'module' var ':' var            (24)
	FunctorInterface -> 'functor' var '(' ParamList ')' '{' Interface '}'   (25)
	FunctorInterface -> 'functor' var '(' ParamList ')' ':' var   (26)
	BindingInterface -> 'val' var ':' Type             (27)
	IType -> Type                                      (28)
	Type -> 'Int'                                      (29)
	Type -> 'Bool'                                     (30)
	Type -> 'String'                                   (31)
	Type -> Type '->' Type                             (32)
	Type -> Type '&' Type                              (33)
	Type -> '[' Type ']'                               (34)
	Type -> 'Sig' '[' Type ',' Type ']'                (35)
	Type -> var                                        (36)
	Type -> '{' RecordType '}'                         (37)
	Type -> '(' Type ')'                               (38)
	RecordType -> Record ',' RecordType                (39)
	RecordType -> Record                               (40)
	Record -> var ':' Type                             (41)
	ParamList -> Param ',' ParamList                   (42)
	ParamList -> Param                                 (43)
	Param -> var ':' Type                              (44)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	var            { TokenVar $$ }
	'Sig'          { TokenSig }
	'Int'          { TokenTypeInt }
	'Bool'         { TokenTypeBool }
	'String'       { TokenTypeString }
	'->'           { TokenTypeArrow }
	'&'            { TokenTypeAnd }
	'type'         { TokenTyAlias }
	'val'          { TokenValDef }
	'function'     { TokenFunc }
	'module'       { TokenModule }
	'@pure'        { TokenPure }
	'@resource'    { TokenResource }
	'functor'      { TokenFunctor }
	'require'      { TokenRequire }
	'interface'    { TokenInterface }
	'['            { TokenOpenSqBracket }
	']'            { TokenCloseSqBracket }
	','            { TokenComma }
	'+'            { TokenPlus }
	'('            { TokenOB }
	')'            { TokenCB }
	';'            { TokenSemicolon }
	':'            { TokenColon }
	'='            { TokenEq }
	'{'            { TokenOpenBracket }
	'}'            { TokenCloseBracket }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_interfaceParser rule  0
	Program         rule  1
	FragmentInterface rules 2, 3, 4
	Required        rules 5, 6, 7
	Requirements    rules 8, 9
	Requirement     rule  10
	Interface       rules 11, 12
	InterfaceStatement rules 13, 14, 15, 16, 17, 18, 19
	TyAlias         rule  20
	IntfAlias       rule  21
	FunctionInterface rule  22
	ModuleInterface rules 23, 24
	FunctorInterface rules 25, 26
	BindingInterface rule  27
	IType           rule  28
	Type            rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38
	RecordType      rules 39, 40
	Record          rule  41
	ParamList       rules 42, 43
	Param           rule  44

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_interfaceParser -> . Program                 (rule 0)

	'@pure'        shift, and enter state 3
	'@resource'    shift, and enter state 4
	'interface'    shift, and enter state 5

	Program        goto state 6
	FragmentInterfacegoto state 2

State 1

	Program -> . FragmentInterface                      (rule 1)

	'@pure'        shift, and enter state 3
	'@resource'    shift, and enter state 4
	'interface'    shift, and enter state 5

	FragmentInterfacegoto state 2

State 2

	Program -> FragmentInterface .                      (rule 1)

	%eof           reduce using rule 1


State 3

	FragmentInterface -> '@pure' . 'interface' var Required Interface    (rule 3)

	'interface'    shift, and enter state 9


State 4

	FragmentInterface -> '@resource' . 'interface' var Required Interface    (rule 4)

	'interface'    shift, and enter state 8


State 5

	FragmentInterface -> 'interface' . var Required Interface    (rule 2)

	var            shift, and enter state 7


State 6

	%start_interfaceParser -> Program .                 (rule 0)

	%eof           accept


State 7

	FragmentInterface -> 'interface' var . Required Interface    (rule 2)

	var            reduce using rule 5
	'Sig'          reduce using rule 5
	'Int'          reduce using rule 5
	'Bool'         reduce using rule 5
	'String'       reduce using rule 5
	'type'         reduce using rule 5
	'val'          reduce using rule 5
	'function'     reduce using rule 5
	'module'       reduce using rule 5
	'functor'      reduce using rule 5
	'require'      shift, and enter state 13
	'interface'    reduce using rule 5
	'['            reduce using rule 5
	'('            reduce using rule 5
	'{'            reduce using rule 5

	Required       goto state 12

State 8

	FragmentInterface -> '@resource' 'interface' . var Required Interface    (rule 4)

	var            shift, and enter state 11


State 9

	FragmentInterface -> '@pure' 'interface' . var Required Interface    (rule 3)

	var            shift, and enter state 10


State 10

	FragmentInterface -> '@pure' 'interface' var . Required Interface    (rule 3)

	var            reduce using rule 5
	'Sig'          reduce using rule 5
	'Int'          reduce using rule 5
	'Bool'         reduce using rule 5
	'String'       reduce using rule 5
	'type'         reduce using rule 5
	'val'          reduce using rule 5
	'function'     reduce using rule 5
	'module'       reduce using rule 5
	'functor'      reduce using rule 5
	'require'      shift, and enter state 13
	'interface'    reduce using rule 5
	'['            reduce using rule 5
	'('            reduce using rule 5
	'{'            reduce using rule 5

	Required       goto state 41

State 11

	FragmentInterface -> '@resource' 'interface' var . Required Interface    (rule 4)

	var            reduce using rule 5
	'Sig'          reduce using rule 5
	'Int'          reduce using rule 5
	'Bool'         reduce using rule 5
	'String'       reduce using rule 5
	'type'         reduce using rule 5
	'val'          reduce using rule 5
	'function'     reduce using rule 5
	'module'       reduce using rule 5
	'functor'      reduce using rule 5
	'require'      shift, and enter state 13
	'interface'    reduce using rule 5
	'['            reduce using rule 5
	'('            reduce using rule 5
	'{'            reduce using rule 5

	Required       goto state 40

State 12

	FragmentInterface -> 'interface' var Required . Interface    (rule 2)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 16
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 13

	Required -> 'require' . var ';'                     (rule 6)
	Required -> 'require' . '(' Requirements ')' ';'    (rule 7)

	var            shift, and enter state 14
	'('            shift, and enter state 15


State 14

	Required -> 'require' var . ';'                     (rule 6)

	';'            shift, and enter state 62


State 15

	Required -> 'require' '(' . Requirements ')' ';'    (rule 7)

	var            shift, and enter state 61

	Requirements   goto state 59
	Requirement    goto state 60

State 16

	FragmentInterface -> 'interface' var Required Interface .    (rule 2)

	%eof           reduce using rule 2


State 17

	Interface -> InterfaceStatement . ';' Interface     (rule 11)
	Interface -> InterfaceStatement .                   (rule 12)

	';'            shift, and enter state 58
	'}'            reduce using rule 12
	%eof           reduce using rule 12


State 18

	InterfaceStatement -> TyAlias .                     (rule 13)

	';'            reduce using rule 13
	'}'            reduce using rule 13
	%eof           reduce using rule 13


State 19

	InterfaceStatement -> IntfAlias .                   (rule 14)

	';'            reduce using rule 14
	'}'            reduce using rule 14
	%eof           reduce using rule 14


State 20

	InterfaceStatement -> FunctionInterface .           (rule 15)

	';'            reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 21

	InterfaceStatement -> ModuleInterface .             (rule 16)

	';'            reduce using rule 16
	'}'            reduce using rule 16
	%eof           reduce using rule 16


State 22

	InterfaceStatement -> FunctorInterface .            (rule 17)

	';'            reduce using rule 17
	'}'            reduce using rule 17
	%eof           reduce using rule 17


State 23

	InterfaceStatement -> BindingInterface .            (rule 18)

	';'            reduce using rule 18
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 24

	InterfaceStatement -> IType .                       (rule 19)

	';'            reduce using rule 19
	'}'            reduce using rule 19
	%eof           reduce using rule 19


State 25

	IType -> Type .                                     (rule 28)
	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	';'            reduce using rule 28
	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 26

	Type -> var .                                       (rule 36)

	'->'           reduce using rule 36
	'&'            reduce using rule 36
	']'            reduce using rule 36
	','            reduce using rule 36
	')'            reduce using rule 36
	';'            reduce using rule 36
	'}'            reduce using rule 36
	%eof           reduce using rule 36


State 27

	Type -> 'Sig' . '[' Type ',' Type ']'               (rule 35)

	'['            shift, and enter state 55


State 28

	Type -> 'Int' .                                     (rule 29)

	'->'           reduce using rule 29
	'&'            reduce using rule 29
	']'            reduce using rule 29
	','            reduce using rule 29
	')'            reduce using rule 29
	';'            reduce using rule 29
	'}'            reduce using rule 29
	%eof           reduce using rule 29


State 29

	Type -> 'Bool' .                                    (rule 30)

	'->'           reduce using rule 30
	'&'            reduce using rule 30
	']'            reduce using rule 30
	','            reduce using rule 30
	')'            reduce using rule 30
	';'            reduce using rule 30
	'}'            reduce using rule 30
	%eof           reduce using rule 30


State 30

	Type -> 'String' .                                  (rule 31)

	'->'           reduce using rule 31
	'&'            reduce using rule 31
	']'            reduce using rule 31
	','            reduce using rule 31
	')'            reduce using rule 31
	';'            reduce using rule 31
	'}'            reduce using rule 31
	%eof           reduce using rule 31


State 31

	TyAlias -> 'type' . var '=' Type                    (rule 20)

	var            shift, and enter state 54


State 32

	BindingInterface -> 'val' . var ':' Type            (rule 27)

	var            shift, and enter state 53


State 33

	FunctionInterface -> 'function' . var '(' ParamList ')' ':' Type    (rule 22)

	var            shift, and enter state 52


State 34

	ModuleInterface -> 'module' . var '{' Interface '}'    (rule 23)
	ModuleInterface -> 'module' . var ':' var           (rule 24)

	var            shift, and enter state 51


State 35

	FunctorInterface -> 'functor' . var '(' ParamList ')' '{' Interface '}'    (rule 25)
	FunctorInterface -> 'functor' . var '(' ParamList ')' ':' var    (rule 26)

	var            shift, and enter state 50


State 36

	IntfAlias -> 'interface' . var '{' Interface '}'    (rule 21)

	var            shift, and enter state 49


State 37

	Type -> '[' . Type ']'                              (rule 34)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 48

State 38

	Type -> '(' . Type ')'                              (rule 38)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 47

State 39

	Type -> '{' . RecordType '}'                        (rule 37)

	var            shift, and enter state 46

	RecordType     goto state 44
	Record         goto state 45

State 40

	FragmentInterface -> '@resource' 'interface' var Required . Interface    (rule 4)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 43
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 41

	FragmentInterface -> '@pure' 'interface' var Required . Interface    (rule 3)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 42
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 42

	FragmentInterface -> '@pure' 'interface' var Required Interface .    (rule 3)

	%eof           reduce using rule 3


State 43

	FragmentInterface -> '@resource' 'interface' var Required Interface .    (rule 4)

	%eof           reduce using rule 4


State 44

	Type -> '{' RecordType . '}'                        (rule 37)

	'}'            shift, and enter state 80


State 45

	RecordType -> Record . ',' RecordType               (rule 39)
	RecordType -> Record .                              (rule 40)

	','            shift, and enter state 79
	'}'            reduce using rule 40


State 46

	Record -> var . ':' Type                            (rule 41)

	':'            shift, and enter state 78


State 47

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Type -> '(' Type . ')'                              (rule 38)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	')'            shift, and enter state 77


State 48

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Type -> '[' Type . ']'                              (rule 34)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	']'            shift, and enter state 76


State 49

	IntfAlias -> 'interface' var . '{' Interface '}'    (rule 21)

	'{'            shift, and enter state 75


State 50

	FunctorInterface -> 'functor' var . '(' ParamList ')' '{' Interface '}'    (rule 25)
	FunctorInterface -> 'functor' var . '(' ParamList ')' ':' var    (rule 26)

	'('            shift, and enter state 74


State 51

	ModuleInterface -> 'module' var . '{' Interface '}'    (rule 23)
	ModuleInterface -> 'module' var . ':' var           (rule 24)

	':'            shift, and enter state 72
	'{'            shift, and enter state 73


State 52

	FunctionInterface -> 'function' var . '(' ParamList ')' ':' Type    (rule 22)

	'('            shift, and enter state 71


State 53

	BindingInterface -> 'val' var . ':' Type            (rule 27)

	':'            shift, and enter state 70


State 54

	TyAlias -> 'type' var . '=' Type                    (rule 20)

	'='            shift, and enter state 69


State 55

	Type -> 'Sig' '[' . Type ',' Type ']'               (rule 35)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 68

State 56

	Type -> Type '->' . Type                            (rule 32)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 67

State 57

	Type -> Type '&' . Type                             (rule 33)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 66

State 58

	Interface -> InterfaceStatement ';' . Interface     (rule 11)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 65
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 59

	Required -> 'require' '(' Requirements . ')' ';'    (rule 7)

	')'            shift, and enter state 64


State 60

	Requirements -> Requirement .                       (rule 8)
	Requirements -> Requirement . ',' Requirements      (rule 9)

	','            shift, and enter state 63
	')'            reduce using rule 8


State 61

	Requirement -> var .                                (rule 10)

	','            reduce using rule 10
	')'            reduce using rule 10


State 62

	Required -> 'require' var ';' .                     (rule 6)

	var            reduce using rule 6
	'Sig'          reduce using rule 6
	'Int'          reduce using rule 6
	'Bool'         reduce using rule 6
	'String'       reduce using rule 6
	'type'         reduce using rule 6
	'val'          reduce using rule 6
	'function'     reduce using rule 6
	'module'       reduce using rule 6
	'functor'      reduce using rule 6
	'interface'    reduce using rule 6
	'['            reduce using rule 6
	'('            reduce using rule 6
	'{'            reduce using rule 6


State 63

	Requirements -> Requirement ',' . Requirements      (rule 9)

	var            shift, and enter state 61

	Requirements   goto state 94
	Requirement    goto state 60

State 64

	Required -> 'require' '(' Requirements ')' . ';'    (rule 7)

	';'            shift, and enter state 93


State 65

	Interface -> InterfaceStatement ';' Interface .     (rule 11)

	'}'            reduce using rule 11
	%eof           reduce using rule 11


State 66

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Type -> Type '&' Type .                             (rule 33)

	'->'           reduce using rule 33
	'&'            reduce using rule 33
	']'            reduce using rule 33
	','            reduce using rule 33
	')'            reduce using rule 33
	';'            reduce using rule 33
	'}'            reduce using rule 33
	%eof           reduce using rule 33


State 67

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type '->' Type .                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	']'            reduce using rule 32
	','            reduce using rule 32
	')'            reduce using rule 32
	';'            reduce using rule 32
	'}'            reduce using rule 32
	%eof           reduce using rule 32


State 68

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Type -> 'Sig' '[' Type . ',' Type ']'               (rule 35)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	','            shift, and enter state 92


State 69

	TyAlias -> 'type' var '=' . Type                    (rule 20)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 91

State 70

	BindingInterface -> 'val' var ':' . Type            (rule 27)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 90

State 71

	FunctionInterface -> 'function' var '(' . ParamList ')' ':' Type    (rule 22)

	var            shift, and enter state 86

	ParamList      goto state 89
	Param          goto state 85

State 72

	ModuleInterface -> 'module' var ':' . var           (rule 24)

	var            shift, and enter state 88


State 73

	ModuleInterface -> 'module' var '{' . Interface '}'    (rule 23)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 87
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 74

	FunctorInterface -> 'functor' var '(' . ParamList ')' '{' Interface '}'    (rule 25)
	FunctorInterface -> 'functor' var '(' . ParamList ')' ':' var    (rule 26)

	var            shift, and enter state 86

	ParamList      goto state 84
	Param          goto state 85

State 75

	IntfAlias -> 'interface' var '{' . Interface '}'    (rule 21)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 83
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 76

	Type -> '[' Type ']' .                              (rule 34)

	'->'           reduce using rule 34
	'&'            reduce using rule 34
	']'            reduce using rule 34
	','            reduce using rule 34
	')'            reduce using rule 34
	';'            reduce using rule 34
	'}'            reduce using rule 34
	%eof           reduce using rule 34


State 77

	Type -> '(' Type ')' .                              (rule 38)

	'->'           reduce using rule 38
	'&'            reduce using rule 38
	']'            reduce using rule 38
	','            reduce using rule 38
	')'            reduce using rule 38
	';'            reduce using rule 38
	'}'            reduce using rule 38
	%eof           reduce using rule 38


State 78

	Record -> var ':' . Type                            (rule 41)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 82

State 79

	RecordType -> Record ',' . RecordType               (rule 39)

	var            shift, and enter state 46

	RecordType     goto state 81
	Record         goto state 45

State 80

	Type -> '{' RecordType '}' .                        (rule 37)

	'->'           reduce using rule 37
	'&'            reduce using rule 37
	']'            reduce using rule 37
	','            reduce using rule 37
	')'            reduce using rule 37
	';'            reduce using rule 37
	'}'            reduce using rule 37
	%eof           reduce using rule 37


State 81

	RecordType -> Record ',' RecordType .               (rule 39)

	'}'            reduce using rule 39


State 82

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Record -> var ':' Type .                            (rule 41)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	','            reduce using rule 41
	'}'            reduce using rule 41


State 83

	IntfAlias -> 'interface' var '{' Interface . '}'    (rule 21)

	'}'            shift, and enter state 101


State 84

	FunctorInterface -> 'functor' var '(' ParamList . ')' '{' Interface '}'    (rule 25)
	FunctorInterface -> 'functor' var '(' ParamList . ')' ':' var    (rule 26)

	')'            shift, and enter state 100


State 85

	ParamList -> Param . ',' ParamList                  (rule 42)
	ParamList -> Param .                                (rule 43)

	','            shift, and enter state 99
	')'            reduce using rule 43


State 86

	Param -> var . ':' Type                             (rule 44)

	':'            shift, and enter state 98


State 87

	ModuleInterface -> 'module' var '{' Interface . '}'    (rule 23)

	'}'            shift, and enter state 97


State 88

	ModuleInterface -> 'module' var ':' var .           (rule 24)

	';'            reduce using rule 24
	'}'            reduce using rule 24
	%eof           reduce using rule 24


State 89

	FunctionInterface -> 'function' var '(' ParamList . ')' ':' Type    (rule 22)

	')'            shift, and enter state 96


State 90

	BindingInterface -> 'val' var ':' Type .            (rule 27)
	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	';'            reduce using rule 27
	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 91

	TyAlias -> 'type' var '=' Type .                    (rule 20)
	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	';'            reduce using rule 20
	'}'            reduce using rule 20
	%eof           reduce using rule 20


State 92

	Type -> 'Sig' '[' Type ',' . Type ']'               (rule 35)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 95

State 93

	Required -> 'require' '(' Requirements ')' ';' .    (rule 7)

	var            reduce using rule 7
	'Sig'          reduce using rule 7
	'Int'          reduce using rule 7
	'Bool'         reduce using rule 7
	'String'       reduce using rule 7
	'type'         reduce using rule 7
	'val'          reduce using rule 7
	'function'     reduce using rule 7
	'module'       reduce using rule 7
	'functor'      reduce using rule 7
	'interface'    reduce using rule 7
	'['            reduce using rule 7
	'('            reduce using rule 7
	'{'            reduce using rule 7


State 94

	Requirements -> Requirement ',' Requirements .      (rule 9)

	')'            reduce using rule 9


State 95

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Type -> 'Sig' '[' Type ',' Type . ']'               (rule 35)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	']'            shift, and enter state 107


State 96

	FunctionInterface -> 'function' var '(' ParamList ')' . ':' Type    (rule 22)

	':'            shift, and enter state 106


State 97

	ModuleInterface -> 'module' var '{' Interface '}' .    (rule 23)

	';'            reduce using rule 23
	'}'            reduce using rule 23
	%eof           reduce using rule 23


State 98

	Param -> var ':' . Type                             (rule 44)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 105

State 99

	ParamList -> Param ',' . ParamList                  (rule 42)

	var            shift, and enter state 86

	ParamList      goto state 104
	Param          goto state 85

State 100

	FunctorInterface -> 'functor' var '(' ParamList ')' . '{' Interface '}'    (rule 25)
	FunctorInterface -> 'functor' var '(' ParamList ')' . ':' var    (rule 26)

	':'            shift, and enter state 102
	'{'            shift, and enter state 103


State 101

	IntfAlias -> 'interface' var '{' Interface '}' .    (rule 21)

	';'            reduce using rule 21
	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 102

	FunctorInterface -> 'functor' var '(' ParamList ')' ':' . var    (rule 26)

	var            shift, and enter state 110


State 103

	FunctorInterface -> 'functor' var '(' ParamList ')' '{' . Interface '}'    (rule 25)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'type'         shift, and enter state 31
	'val'          shift, and enter state 32
	'function'     shift, and enter state 33
	'module'       shift, and enter state 34
	'functor'      shift, and enter state 35
	'interface'    shift, and enter state 36
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Interface      goto state 109
	InterfaceStatementgoto state 17
	TyAlias        goto state 18
	IntfAlias      goto state 19
	FunctionInterfacegoto state 20
	ModuleInterfacegoto state 21
	FunctorInterfacegoto state 22
	BindingInterfacegoto state 23
	IType          goto state 24
	Type           goto state 25

State 104

	ParamList -> Param ',' ParamList .                  (rule 42)

	')'            reduce using rule 42


State 105

	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)
	Param -> var ':' Type .                             (rule 44)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	','            reduce using rule 44
	')'            reduce using rule 44


State 106

	FunctionInterface -> 'function' var '(' ParamList ')' ':' . Type    (rule 22)

	var            shift, and enter state 26
	'Sig'          shift, and enter state 27
	'Int'          shift, and enter state 28
	'Bool'         shift, and enter state 29
	'String'       shift, and enter state 30
	'['            shift, and enter state 37
	'('            shift, and enter state 38
	'{'            shift, and enter state 39

	Type           goto state 108

State 107

	Type -> 'Sig' '[' Type ',' Type ']' .               (rule 35)

	'->'           reduce using rule 35
	'&'            reduce using rule 35
	']'            reduce using rule 35
	','            reduce using rule 35
	')'            reduce using rule 35
	';'            reduce using rule 35
	'}'            reduce using rule 35
	%eof           reduce using rule 35


State 108

	FunctionInterface -> 'function' var '(' ParamList ')' ':' Type .    (rule 22)
	Type -> Type . '->' Type                            (rule 32)
	Type -> Type . '&' Type                             (rule 33)

	'->'           shift, and enter state 56
	'&'            shift, and enter state 57
	';'            reduce using rule 22
	'}'            reduce using rule 22
	%eof           reduce using rule 22


State 109

	FunctorInterface -> 'functor' var '(' ParamList ')' '{' Interface . '}'    (rule 25)

	'}'            shift, and enter state 111


State 110

	FunctorInterface -> 'functor' var '(' ParamList ')' ':' var .    (rule 26)

	';'            reduce using rule 26
	'}'            reduce using rule 26
	%eof           reduce using rule 26


State 111

	FunctorInterface -> 'functor' var '(' ParamList ')' '{' Interface '}' .    (rule 25)

	';'            reduce using rule 25
	'}'            reduce using rule 25
	%eof           reduce using rule 25


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 45
Number of terminals: 27
Number of non-terminals: 20
Number of states: 112
